@@ -8,6 +8,7 @@ Version 1.2.0 - CVS
  - Added examples and documentation for how to use interpreted languages.
  - Added support for specialised run and compare scripts.
  - Timeout submitclient connection to server (Closes: #1477739).
+ - Add support for team passwords (generating and validating).
 
 Version 1.1.0 - 22 December 2005
 --------------------------------
